# dake

./: .env.example  .gitignore  Anchor.toml  PROGRAM_ID.md  README.md  package.json
app/: package-lock.json  package.json
app/public/: pitch.html
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/admin/: layout.tsx  page.tsx
app/src/app/api/chat/: route.ts
app/src/app/markets/: layout.tsx  page.tsx
app/src/app/markets/[id]/: page.tsx
app/src/app/portfolio/: layout.tsx  page.tsx
app/src/app/raffle/[id]/: page.tsx
app/src/components/app/: AIChatPanel.tsx  AppLayout.tsx  AppNavbar.tsx
app/src/components/landing/: CTASection.tsx  CommunitySection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  VerticalLines.tsx  index.ts
app/src/hooks/: useMarketByPubkey.ts  useMarkets.ts  useRaffle.ts
app/src/lib/: idl.json  program.ts
app/src/types/: chat.ts
programs/dake/: Cargo.toml
programs/dake/src/: error.rs  lib.rs
programs/dake/src/instructions/: check_winner.rs  claim_winnings.rs  close_market.rs  create_market.rs  grant_decrypt_access.rs  mod.rs  place_bet.rs  resolve_market.rs
programs/dake/src/state/: mod.rs
tests/: dake.ts
